# Vector

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.sh  makefile
cli/: CMakeLists.txt
cli/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: Emulator.hpp  ExecutionUnit.hpp  Memory.hpp  Processor.hpp  RegisterFile.hpp  constants.hpp  instruction_set.hpp  types.hpp  utils.hpp
lib/include/instructions/: Instruction32.hpp
lib/src/: Emulator.cpp  ExecutionUnit.cpp  Memory.cpp  Processor.cpp  RegisterFile.cpp
lib/src/instructions/: Instruction32.cpp
src/: Memory.hpp  Processor.cpp  Processor.hpp  Registers.cpp  constants.hpp  main.cpp  utils.cpp
src/cli/: CMakeLists.txt  main.cpp
src/instructions/: Rtype.cpp  Stype.cpp
src/lib/: CMakeLists.txt  Memory.cpp  Processor.cpp  Processor.hpp  Registers.hpp  debug.hpp  utils.hpp
src/lib/instructions/: Btype.cpp  Itype.cpp  Jtype.cpp  Utype.cpp
tests/: hello.s
